--- a/.env.development.example
+++ b/.env.development.example
@@ -4,4 +4,6 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=order-management
 PORT=3000
+REDIS_HOST=localhost
+REDIS_PORT=6379
 AUTHENTICATION_TOKEN=#VNTRIP20!9@4749
