Fix Bug Can't Connect To Redis In Docker

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=order-management
 PORT=3000
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 AUTHENTICATION_TOKEN=#VNTRIP20!9@4749
