--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.1.4",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
