Update Default Cache TTL

--- a/.env.development.example
+++ b/.env.development.example
@@ -7,3 +7,6 @@ PORT=3000
 REDIS_HOST=localhost
 REDIS_PORT=6379
 AUTHENTICATION_TOKEN=#VNTRIP20!9@4749
+
+# Set default TTL for cache in 3 months
+CACHE_TTL=7890000
