--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/schedule": "^0.4.1",
+    "@nestjs/swagger": "^4.6.1",
     "@nestjs/typeorm": "^7.1.4",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
@@ -35,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.26"
   },
   "devDependencies": {
